<resources>
    <string name="app_name">Android Graphics Tablet</string>
    <string name="ip_address">IP Address</string>
    <string name="port">Port</string>
    <string name="enter_port_number">Enter Port Number</string>
    <string name="enter_ip_address">Enter IP Address</string>
    <string name="connect">Connect</string>
    <string name="key">"Key %d"</string>
    <string name="name">Name</string>
    <string name="strict_palm_rejection">Strict Palm Rejection</string>
    <string name="double_tap">Double Tap</string>
    <string name="single_tap">Single Tap</string>
    <string name="fling">Fling</string>
    <string name="draw_here">Draw Here :)</string>
</resources>